kubernetes/auth-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"auth","namespace":"cloudcart"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"auth"}},"template":{"metadata":{"labels":{"app":"auth"}},"spec":{"containers":[{"env":[{"name":"JWT_ACCESS_SECRET","valueFrom":{"secretKeyRef":{"key":"JWT_ACCESS_SECRET","name":"auth-secret"}}},{"name":"JWT_REFRESH_SECRET","valueFrom":{"secretKeyRef":{"key":"JWT_REFRESH_SECRET","name":"auth-secret"}}},{"name":"BCRYPT_ROUNDS", [...]
  creationTimestamp: "2026-05-31T16:08:11Z"
  generation: 2
  name: auth
  namespace: cloudcart
  resourceVersion: "1706421"
  uid: d053702a-2342-409e-86cc-b8d3709ad9c9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: auth
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-06-11T11:23:13Z"
      labels:
        app: auth
    spec:
      containers:
      - env:
        - name: JWT_ACCESS_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_ACCESS_SECRET
              name: auth-secret
        - name: JWT_REFRESH_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_REFRESH_SECRET
              name: auth-secret
        - name: BCRYPT_ROUNDS
          value: "12"
        image: suphinhazainarr/cloudcart-auth-service:v1
        imagePullPolicy: IfNotPresent
        name: auth
        ports:
        - containerPort: 4001
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2026-06-11T12:19:49Z"
    lastUpdateTime: "2026-06-11T12:19:49Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-05-31T16:08:11Z"
    lastUpdateTime: "2026-06-11T12:19:53Z"
    message: ReplicaSet "auth-757fdd98bd" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 2
  replicas: 2
  terminatingReplicas: 0
  unavailableReplicas: 2
  updatedReplicas: 1
