kubernetes/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth
  namespace: cloudcart

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth

  template:
    metadata:
      labels:
        app: auth

    spec:
      containers:
      - name: auth

        image: suphinhazainarr/cloudcart-auth-service:v1

        ports:
        - containerPort: 4001
