kubernetes/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cart
  namespace: cloudcart

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cart

  template:
    metadata:
      labels:
        app: cart

    spec:
      containers:
      - name: cart

        image: suphinhazainarr/cloudcart-cart:v1

        ports:
        - containerPort: 4003
