kubernetes/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gateway
  namespace: cloudcart

spec:
  replicas: 1

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      containers:
      - name: gateway

        image: suphinhazainarr/cloudcart-gateway:v4

        ports:
        - containerPort: 4000
