kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongodb
  namespace: cloudcart

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb
        image: mongo:7
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db

      volumes:
      - name: mongodb-storage
        persistentVolumeClaim:
          claimName: pvc-test
