kubernetes/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification
  namespace: cloudcart

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notification

  template:
    metadata:
      labels:
        app: notification

    spec:
      containers:
      - name: notification

        image: suphinhazainarr/cloudcart-notification:v1

        ports:
        - containerPort: 4006
