kubernetes/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment
  namespace: cloudcart

spec:
  replicas: 1

  selector:
    matchLabels:
      app: payment

  template:
    metadata:
      labels:
        app: payment

    spec:
      containers:
      - name: payment

        image: suphinhazainarr/cloudcart-payment:v1

        ports:
        - containerPort: 4005
