kubernetes/cart-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cart
  namespace: cloudcart

spec:
  selector:
    app: cart

  ports:
  - port: 4003
    targetPort: 4003

  type: ClusterIP
