kubernetes/notification-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: notification
  namespace: cloudcart

spec:
  selector:
    app: notification

  ports:
  - port: 4006
    targetPort: 4006

  type: ClusterIP
