kubernetes/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product
  namespace: cloudcart

spec:
  selector:
    app: product

  ports:
  - port: 4002
    targetPort: 4002

  type: ClusterIP
