kubernetes/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: auth-ingress
  namespace: cloudcart

spec:
  ingressClassName: nginx

  rules:
  - host: auth.cloudcart.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: auth
            port:
              number: 4001
