kubernetes/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: order-ingress
  namespace: cloudcart

spec:
  ingressClassName: nginx

  rules:
  - host: order.cloudcart.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: order
            port:
              number: 4004
