kubernetes/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: cloudcart
spec:
  ingressClassName: nginx
  rules:
  - host: web.cloudcart.local
    http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 4000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
